Added simple email templating
